# wgpu_automata

./: Cargo.toml  README.md  build.rs  index.html  sw.js  wgpu_automata-3ad61eeefe1e460c.js  wgpu_automata-3ad61eeefe1e460c_bg.wasm
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  camera.rs  lib.rs  main.rs  renderer.rs  shaders.rs  triangle.rs
src/app/: automata.wgsl  particles.rs  profiler.rs  renderer.rs
src/renderer/: camera.rs  cube.wgsl  shader.rs  shader.wgsl  shaders.rs
src/renderer/shaders/: bgroup_camera.wgsl  camera.wgsl  cube.wgsl  skybox.wgsl  textured_quad.wgsl
src/shaders/: automata.rs  automata.wgsl  boids.rs  boids.wgsl
