[package]
name = "wgpu_automata"
version = "0.1.0"
authors = ["John Michael Bell <johnmichaelbell@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "wgpu", "persistence", "wayland", "x11", "puffin"] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
puffin = { version = "0.19.1", features = ["web"] }
puffin_egui = "0.29.0"
bytemuck = { version = "1.16.3", features = ["derive"] }
ktx2 = "0.3.0"
wgpu = "0.20.1"
web-time = "1.1.0"
nanorand = { version = "0.7.0", default-features = false, features = ["wyrand"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "=0.3.69"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
wgsl_to_wgpu = { git = "https://github.com/Gonkalbell/wgsl_to_wgpu.git" }
